Bug 1850811 - Clean-up high-contrast declarations. r=dao
No behavior change (though I'd note some of the colors don't really
make sense to me).

You can get those declarations to take effect on other platforms by
tweaking the color settings (always / never override colors, etc),
it's just the default setting which is different on Windows and
elsewhere.

Though you could argue we might not want to force colors in chrome
ever? We could do that with `forced-color-adjust: none` as needed.

Depends on D187193

Differential Revision: https://phabricator.services.mozilla.com/D187194

--- a/toolkit/themes/shared/design-tokens-shared.css
+++ b/toolkit/themes/shared/design-tokens-shared.css
@@ -101,6 +101,10 @@
   :host {
     /* Border */
     --border-color: var(--text-color);
+    --border-interactive-color: AccentColor;
+    --border-interactive-color-hover: ButtonText;
+    --border-interactive-color-active: AccentColor;
+    --border-interactive-color-disabled: GrayText;
 
     /* Button */
     --button-background-color: ButtonFace;
@@ -120,6 +124,10 @@
     --color-background-success: var(--color-canvas);
     --color-background-warning: var(--color-canvas);
     --color-background-critical: var(--color-canvas);
+    --color-accent-primary: AccentColor;
+    /* FIXME(emilio): These seem rather sketchy */
+    --color-accent-primary-hover: ButtonText;
+    --color-accent-primary-active: ButtonText;
 
     /** Icon **/
     --icon-color: var(--text-color);
@@ -132,38 +140,22 @@
     --text-color: CanvasText;
     --text-color-deemphasized: inherit;
   }
-}
 
-@media (forced-colors) {
-  /* Applies to Windows HCM only */
-  :root,
-  :host {
-    /* Border */
-    --border-interactive-color: ButtonText;
-    --border-interactive-color-hover: SelectedItem;
-    --border-interactive-color-active: ButtonText;
-    --border-interactive-color-disabled: GrayText;
+  @media (forced-colors) {
+    /* Applies to Windows HCM only, by default.
+       TODO(emilio): These seem rather sketchy */
+    :root,
+    :host {
+      /* Border */
+      --border-interactive-color: ButtonText;
+      --border-interactive-color-hover: SelectedItem;
+      --border-interactive-color-active: ButtonText;
+      --border-interactive-color-disabled: GrayText;
 
-    /* Color */
-    --color-accent-primary: ButtonText;
-    --color-accent-primary-hover: SelectedItem;
-    --color-accent-primary-active: SelectedItem;
-  }
-}
-
-@media (forced-colors: none) and (prefers-contrast)  {
-  /* Applies to macOS "increase contrast" only */
-  :root,
-  :host {
-    /* Border */
-    --border-interactive-color: AccentColor;
-    --border-interactive-color-hover: ButtonText;
-    --border-interactive-color-active: AccentColor;
-    --border-interactive-color-disabled: GrayText;
-
-    /* Color */
-    --color-accent-primary: AccentColor;
-    --color-accent-primary-hover: ButtonText;
-    --color-accent-primary-active: ButtonText;
+      /* Color */
+      --color-accent-primary: ButtonText;
+      --color-accent-primary-hover: SelectedItem;
+      --color-accent-primary-active: SelectedItem;
+    }
   }
 }
