Bug 1850811 - Use standard system colors rather than -moz-nativehyperlinktext. r=dao
These do the right thing on chrome contexts to use the actual native
colors, so no need to use the prefixed ones.

Differential Revision: https://phabricator.services.mozilla.com/D187192

--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -359,7 +359,7 @@ menuitem.bookmark-item {
 
   /* Address bar results view */
   :root:not(:-moz-lwtheme) {
-    --urlbar-popup-action-color: -moz-nativehyperlinktext;
+    --urlbar-popup-action-color: LinkText;
   }
 }
 
