--- a/toolkit/themes/shared/design-tokens-system.css
+++ b/toolkit/themes/shared/design-tokens-system.css
@@ -15,9 +15,9 @@
     --button-background-color-active: var(--button-active-bgcolor);
 
     /** Link **/
-    --link-color: -moz-nativehyperlinktext;
-    --link-color-hover: -moz-nativehyperlinktext;
-    --link-color-active: -moz-nativehyperlinktext;
+    --link-color: LinkText;
+    --link-color-hover: LinkText;
+    --link-color-active: ActiveText;
     --link-color-visited: var(--link-color);
 
     /* Color */
