Bug 1849571 - Match onboarding container height to content in shopping sidebar r=omc-reviewers,aminomancer
Differential Revision: https://phabricator.services.mozilla.com/D187064

--- a/browser/components/newtab/aboutwelcome/content/aboutwelcome.css
+++ b/browser/components/newtab/aboutwelcome/content/aboutwelcome.css
@@ -645,8 +645,17 @@ panel#feature-callout[arrow-position=inline-start-bottom] {
   outline: 2px solid var(--fc-accent-color);
 }
 
+.onboardingContainer.shopping {
+  height: auto;
+}
+.onboardingContainer.shopping .outer-wrapper {
+  height: auto;
+}
+
 .onboardingContainer.shopping .screen[pos=split] {
   height: auto;
+  margin: 0 auto;
+  min-height: fit-content;
 }
 .onboardingContainer.shopping .screen[pos=split]::before {
   content: none;
