Backed out 4 changesets (bug 1850811) for causing lint-failures in toolkit/themes/shared/design-tokens-brand.css CLOSED TREE
Backed out changeset ad418df11a3c (bug 1850811)
Backed out changeset 00ad595422a0 (bug 1850811)
Backed out changeset 664755b2010f (bug 1850811)
Backed out changeset abaaeed579ba (bug 1850811)

--- a/browser/themes/shared/downloads/downloads.inc.css
+++ b/browser/themes/shared/downloads/downloads.inc.css
@@ -109,7 +109,7 @@
 }
 
 #downloadsSummaryDescription {
-  color: LinkText;
+  color: -moz-nativehyperlinktext;
 }
 
 :root[lwt-popup-brighttext] #downloadsSummaryDescription {
