--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -375,7 +375,7 @@ menuitem.bookmark-item {
 
   /* Address bar results view */
   :root:not(:-moz-lwtheme) {
-    --urlbar-popup-action-color: LinkText;
+    --urlbar-popup-action-color: -moz-nativehyperlinktext;
   }
 }
 
