--- a/toolkit/themes/shared/design-tokens-brand.css
+++ b/toolkit/themes/shared/design-tokens-brand.css
@@ -4,8 +4,7 @@
 
 @import url("chrome://global/skin/design-tokens-shared.css");
 
-:root,
-:host(.anonymous-content-host) {
+:root {
   /* Typography */
   /** Font size **/
   --in-content-font-body-size-base: 15px;
@@ -13,10 +12,9 @@
 }
 
 @media not (prefers-contrast) {
-  :root,
-  :host(.anonymous-content-host) {
+  :root {
     /* Border */
-    --border-interactive-color: light-dark(var(--color-gray-60), var(--color-gray-50));
+    --border-interactive-color: var(--color-gray-60);
 
     /* Button */
     /* TODO Bug 1821203 - Gray use needs to be consolidated */
@@ -34,16 +32,28 @@
     --color-accent-primary: var(--brand-color-accent);
     --color-accent-primary-hover: var(--brand-color-accent-hover);
     --color-accent-primary-active: var(--brand-color-accent-active);
-
-    --brand-color-accent: light-dark(var(--color-blue-50), var(--color-cyan-50));
-    --brand-color-accent-hover: light-dark(var(--color-blue-60), var(--color-cyan-30));
-    --brand-color-accent-active: light-dark(var(--color-blue-70), var(--color-cyan-20));
-    --color-canvas: light-dark(var(--color-white), var(--color-gray-90));
+    --brand-color-accent: var(--color-blue-50);
+    --brand-color-accent-hover: var(--color-blue-60);
+    --brand-color-accent-active: var(--color-blue-70);
+    --color-canvas: var(--color-white);
 
     /* Text */
-    --text-color-deemphasized: light-dark(
-      color-mix(in srgb, currentColor 69%, transparent),
-      color-mix(in srgb, currentColor 75%, transparent)
-    );
+    --text-color-deemphasized: color-mix(in srgb, currentColor 69%, transparent);
+  }
+}
+
+@media (prefers-contrast: no-preference) and (prefers-color-scheme: dark) {
+  :root {
+    /* Border */
+    --border-interactive-color: var(--color-gray-50);
+
+    /* Color */
+    --brand-color-accent: var(--color-cyan-50);
+    --brand-color-accent-hover: var(--color-cyan-30);
+    --brand-color-accent-active: var(--color-cyan-20);
+    --color-canvas: var(--color-gray-90);
+
+    /* Text */
+    --text-color-deemphasized: color-mix(in srgb, currentColor 75%, transparent);
   }
 }
