--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -104,7 +104,7 @@ menuitem.bookmark-item {
 /* Address bar results view */
 
 :root:not(:-moz-lwtheme) {
-  --urlbar-popup-action-color: LinkText;
+  --urlbar-popup-action-color: -moz-nativehyperlinktext;
   --autocomplete-popup-highlight-background: SelectedItem;
   --autocomplete-popup-highlight-color: SelectedItemText;
 }
