--- a/layout/reftests/mathml/overbar-width-1-ref.xhtml
+++ b/layout/reftests/mathml/overbar-width-1-ref.xhtml
@@ -1,8 +1,5 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>Check width of stretchy OverBar</title>
-    <link rel="match" href="overbar-width-1-ref.xhtml"/>
-    <link rel="help" href="https://bugzilla.mozilla.org/show_bug.cgi?id=427666"/>
     <style type="text/css">
       html { background-color: grey; }
       div { display: inline-block;
@@ -11,16 +8,18 @@
             border: 1px solid white;
             padding: 2px; /* 10% error allowed in char selection */
             background-color: black;
-            color: black; }
+            color: red; }
     </style>
   </head>
 <body>
   <div>
     <math xmlns="http://www.w3.org/1998/Math/MathML">
-      <mover>
-        <mi>ai</mi>
-        <mo>&#xaf;</mo>
-      </mover>
+      <mphantom>
+	<mover>
+	  <mi>ai</mi>
+	  <mo>&#xaf;</mo>
+	</mover>
+      </mphantom>
     </math>
   </div>
 </body>
