--- a/layout/reftests/mathml/underbar-width-1-ref.xhtml
+++ b/layout/reftests/mathml/underbar-width-1-ref.xhtml
@@ -4,7 +4,7 @@
       html { background-color: grey; }
       div { display: inline-block;
             font-size: 30px;
-            line-height: 60px; /* Ensure space for overbar */
+            line-height: 60px; /* Ensure space for underbar */
             border: 1px solid white;
             padding: 2px; /* 10% error allowed in char selection */
             background-color: black;
@@ -15,10 +15,10 @@
   <div>
     <math xmlns="http://www.w3.org/1998/Math/MathML">
       <mphantom>
-        <mover>
-          <mi>ai</mi>
-          <mo>&#xaf;</mo>
-        </mover>
+	<munder>
+	  <mn>1</mn>
+	  <mo>&#x332;</mo>
+	</munder>
       </mphantom>
     </math>
   </div>
