Bug 1851525 - Allow Firefox View icon to be set via Nimbus. r=sclements,desktop-theme-reviewers,fxview-reviewers,dao,sfoster
Differential Revision: https://phabricator.services.mozilla.com/D187458

--- a/browser/themes/shared/toolbarbutton-icons.css
+++ b/browser/themes/shared/toolbarbutton-icons.css
@@ -466,5 +466,9 @@ toolbarbutton.bookmark-item {
 }
 
 #firefox-view-button {
-  list-style-image: url("chrome://browser/skin/firefox-view.svg");
+  list-style-image: url("chrome://branding/content/about-logo.png");
+
+  :root[firefoxview-newicon] & {
+    list-style-image: url("chrome://browser/skin/firefox-view.svg");
+  }
 }
