Bug 1849703 - Adding a border to the Shopping sidebar to separate it from the page content on HCM. r=desktop-theme-reviewers,shopping-reviewers,Gijs,Itiel
Using `--in-content-box-border-color` since it resoves to the `CanvasText` and is using the same variable pair applied to the `#shopping-container` by default.

Differential Revision: https://phabricator.services.mozilla.com/D187526

--- a/browser/components/shopping/content/shopping-container.css
+++ b/browser/components/shopping/content/shopping-container.css
@@ -17,6 +17,12 @@ body {
   background-color: var(--in-content-box-background-odd);
 }
 
+@media (prefers-contrast) {
+  #shopping-container {
+    border-inline-start: 1px solid var(--in-content-box-border-color);
+  }
+}
+
 #shopping-icon {
   width: 32px;
   height: 32px;
