Bug 1777035 - test in between password field - r=credential-management-reviewers,sgalich
Differential Revision: https://phabricator.services.mozilla.com/D183866

--- a/toolkit/components/passwordmgr/test/mochitest/test_autocomplete_password_generation_confirm.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_autocomplete_password_generation_confirm.html
@@ -234,12 +234,16 @@ Login Manager test: filling generated passwords into confirm password fields
     html: `<form id="form1" action="https://example.com" onsubmit="return false;">
     <input type="text" name="uname">
     <input type="password" name="pword" autocomplete="new-password">
-    <input type="password" name="pword-between">
-    <input type="password" name="pwordNext" autocomplete="new-password" disabled>
+    <input type="password" name="pwordNext">
+    <input type="password" name="pwordAfter" autocomplete="new-password" disabled>
     <button type="submit">Submit</button>
   </form>`,
     expectMaskedPasswordConfirmation: true,
-    expectFilledPasswordConfirmation: ""
+    expectFilledPasswordConfirmation: true,
+    afterPasswordGeneration: form => {
+      is(form.pwordAfter.value, "", "Value of the disabled password did not change");
+      ok(!form.pwordAfter.matches(":autofill"), "Highlight was not applied to the disabled password field");
+    }
   }));
 
   add_task(() => testConfirmPasswordFieldFilledWithGeneratedPassword({
