Bug 1777035 - re-enable test_autocomplete_password_generation_confirm.html on linux - r=credential-management-reviewers,sgalich
Differential Revision: https://phabricator.services.mozilla.com/D183870

--- a/toolkit/components/passwordmgr/test/mochitest/test_autocomplete_password_generation_confirm.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_autocomplete_password_generation_confirm.html
@@ -78,7 +78,7 @@ Login Manager test: filling generated passwords into confirm password fields
     is(generatedPassword.length, GENERATED_PASSWORD_LENGTH, "Generated password length matches");
     ok(generatedPassword.match(GENERATED_PASSWORD_REGEX), "Generated password format matches");
 
-    LOGIN_FIELD_UTILS.checkPasswordMasked(form.pword, false, `password field is not masked after password generation`);
+    LOGIN_FIELD_UTILS.checkPasswordMasked(form.pword, false, "password field is not masked after password generation");
 
     const passwordInputs = form.querySelectorAll("input[type='password']:not([name='pword'])");
     for (const passwordInput of passwordInputs) {
