Bug 1777035 - check all other password fields to be masked - r=credential-management-reviewers,sgalich
Differential Revision: https://phabricator.services.mozilla.com/D183869

--- a/toolkit/components/passwordmgr/test/mochitest/test_autocomplete_password_generation_confirm.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_autocomplete_password_generation_confirm.html
@@ -33,7 +33,6 @@ Login Manager test: filling generated passwords into confirm password fields
     title,
     html,
     afterFormAutofill,
-    expectMaskedPasswordConfirmation,
     expectFilledPasswordConfirmation,
     afterPasswordGeneration
   }) {
@@ -79,10 +78,11 @@ Login Manager test: filling generated passwords into confirm password fields
     is(generatedPassword.length, GENERATED_PASSWORD_LENGTH, "Generated password length matches");
     ok(generatedPassword.match(GENERATED_PASSWORD_REGEX), "Generated password format matches");
 
-    LOGIN_FIELD_UTILS.checkPasswordMasked(form.pword, false, "password field not masked after fill");
+    LOGIN_FIELD_UTILS.checkPasswordMasked(form.pword, false, `password field is not masked after password generation`);
 
-    if (expectMaskedPasswordConfirmation) {
-      LOGIN_FIELD_UTILS.checkPasswordMasked(form.pwordNext, true, "password confirmation field is masked");
+    const passwordInputs = form.querySelectorAll("input[type='password']:not([name='pword'])");
+    for (const passwordInput of passwordInputs) {
+      LOGIN_FIELD_UTILS.checkPasswordMasked(passwordInput, true, `password field ${passwordInput.name} is masked`);
     }
 
     ok(!form.uname.matches(":autofill"), "Highlight was not applied to the field");
@@ -109,9 +109,10 @@ Login Manager test: filling generated passwords into confirm password fields
 
     await messageSentPromise;
 
-    if (expectMaskedPasswordConfirmation) {
-      LOGIN_FIELD_UTILS.checkPasswordMasked(form.pwordNext, true, "password confirmation field is masked");
+    for (const passwordInput of passwordInputs) {
+      LOGIN_FIELD_UTILS.checkPasswordMasked(passwordInput, true, `password field ${passwordInput.name} is masked`);
     }
+
     if (expectFilledPasswordConfirmation === true) {
       is(form.pwordNext.value, generatedPassword, "Value of the confirm field has been filled with generated password");
       ok(form.pwordNext.matches(":autofill"), "Highlight was applied to the input field");
@@ -130,8 +131,8 @@ Login Manager test: filling generated passwords into confirm password fields
     synthesizeKey("a");
     form.pwordNext.blur();
 
-    if (expectMaskedPasswordConfirmation) {
-      LOGIN_FIELD_UTILS.checkPasswordMasked(form.pwordNext, true, "password confirmation field is masked");
+    for (const passwordInput of passwordInputs) {
+      LOGIN_FIELD_UTILS.checkPasswordMasked(passwordInput, true, `password field ${passwordInput.name} is masked`);
     }
 
     await SimpleTest.promiseWaitForCondition(() => !form.pwordNext.matches(":autofill"), "Highlight was cleared");
@@ -145,7 +146,6 @@ Login Manager test: filling generated passwords into confirm password fields
     <input type="password" name="pwordNext">
     <button type="submit">Submit</button>
   </form>`,
-    expectMaskedPasswordConfirmation: true,
     expectFilledPasswordConfirmation: true
   }));
 
@@ -172,7 +172,6 @@ Login Manager test: filling generated passwords into confirm password fields
     <input type="password" name="pwordNext" value="initial value">
     <button type="submit">Submit</button>
   </form>`,
-    expectMaskedPasswordConfirmation: true,
     expectFilledPasswordConfirmation: "initial value"
   }));
 
@@ -184,7 +183,6 @@ Login Manager test: filling generated passwords into confirm password fields
     <input type="password" name="pwordNext">
     <button type="submit">Submit</button>
   </form>`,
-    expectMaskedPasswordConfirmation: true,
     expectFilledPasswordConfirmation: "edited value",
     afterFormAutofill: form => {
       form.pwordNext.focus()
@@ -200,7 +198,6 @@ Login Manager test: filling generated passwords into confirm password fields
     <input type="password" name="pwordNext" readonly>
     <button type="submit">Submit</button>
   </form>`,
-    expectMaskedPasswordConfirmation: true,
     expectFilledPasswordConfirmation: ""
   }));
 
@@ -212,7 +209,6 @@ Login Manager test: filling generated passwords into confirm password fields
     <input type="password" name="pwordNext" disabled>
     <button type="submit">Submit</button>
   </form>`,
-    expectMaskedPasswordConfirmation: true,
     expectFilledPasswordConfirmation: ""
   }));
 
@@ -225,7 +221,6 @@ Login Manager test: filling generated passwords into confirm password fields
     <input type="password" name="pwordNext" autocomplete="new-password">
     <button type="submit">Submit</button>
   </form>`,
-    expectMaskedPasswordConfirmation: true,
     expectFilledPasswordConfirmation: true
   }));
 
@@ -238,7 +233,6 @@ Login Manager test: filling generated passwords into confirm password fields
     <input type="password" name="pwordAfter" autocomplete="new-password" disabled>
     <button type="submit">Submit</button>
   </form>`,
-    expectMaskedPasswordConfirmation: true,
     expectFilledPasswordConfirmation: true,
     afterPasswordGeneration: form => {
       is(form.pwordAfter.value, "", "Value of the disabled password did not change");
@@ -259,7 +253,6 @@ Login Manager test: filling generated passwords into confirm password fields
     <input type="password" name="pwordNext" autocomplete="new-password">
     <button type="submit">Submit</button>
   </form>`,
-    expectMaskedPasswordConfirmation: true,
     expectFilledPasswordConfirmation: ""
   }));
 
@@ -276,7 +269,6 @@ Login Manager test: filling generated passwords into confirm password fields
     <input type="password" name="pwordNext" autocomplete="new-password">
     <button type="submit">Submit</button>
   </form>`,
-    expectMaskedPasswordConfirmation: true,
     expectFilledPasswordConfirmation: ""
   }));
 
@@ -293,7 +285,6 @@ Login Manager test: filling generated passwords into confirm password fields
     <input type="password" name="pwordNext" autocomplete="new-password">
     <button type="submit">Submit</button>
   </form>`,
-    expectMaskedPasswordConfirmation: true,
     expectFilledPasswordConfirmation: true
   }));
 
@@ -307,7 +298,6 @@ Login Manager test: filling generated passwords into confirm password fields
     <input type="password" name="pwordExtra" autocomplete="new-password">
     <button type="submit">Submit</button>
   </form>`,
-    expectMaskedPasswordConfirmation: true,
     expectFilledPasswordConfirmation: true,
     afterPasswordGeneration: form => {
       is(form.pwordExtra.value, "", "Value of the extrafield did not change");
