Bug 1851834 - Update shopping sidebar background color. r=shopping-reviewers,desktop-theme-reviewers,kpatenio,dao
Differential Revision: https://phabricator.services.mozilla.com/D187585

--- a/browser/components/shopping/content/shopping.html
+++ b/browser/components/shopping/content/shopping.html
@@ -19,6 +19,10 @@
     <link rel="localization" href="browser/shopping.ftl" />
 
     <link rel="stylesheet" href="chrome://global/skin/in-content/common.css" />
+    <link
+      rel="stylesheet"
+      href="chrome://browser/content/shopping/shopping-page.css"
+    />
 
     <script src="chrome://global/content/elements/message-bar.js"></script>
     <script
