--- a/toolkit/content/widgets/message-bar.css
+++ b/toolkit/content/widgets/message-bar.css
@@ -91,11 +91,16 @@
 }
 
 .icon::after {
+  display: inline-block;
   appearance: none;
   -moz-context-properties: fill, stroke;
   fill: currentColor;
   stroke: currentColor;
-  content: var(--message-bar-icon-url);
+  content: "";
+  background-image: var(--message-bar-icon-url);
+  background-size: var(--icon-size);
+  width: var(--icon-size);
+  height: var(--icon-size);
 }
 
 /* Use a spacer to position the close button at the end, but also support
