Backed out changeset e69f779ab23f (bug 1850602) for causing mochitests failures. CLOSED TREE

--- a/toolkit/content/widgets/message-bar.css
+++ b/toolkit/content/widgets/message-bar.css
@@ -91,16 +91,11 @@
 }
 
 .icon::after {
-  display: inline-block;
   appearance: none;
   -moz-context-properties: fill, stroke;
   fill: currentColor;
   stroke: currentColor;
-  content: "";
-  background-image: var(--message-bar-icon-url);
-  background-size: var(--icon-size);
-  width: var(--icon-size);
-  height: var(--icon-size);
+  content: var(--message-bar-icon-url);
 }
 
 /* Use a spacer to position the close button at the end, but also support
